<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="setia.example.com.watchkids.Activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:focusableInTouchMode="true"
            android:id="@+id/lyt_login"
            android:background="@drawable/rounded_corner_background"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:hint="@string/login_hint_username"
                android:layout_marginTop="10dp"
                android:id="@+id/et_username"
                android:drawablePadding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:hint="@string/login_hint_password"
                android:layout_marginTop="10dp"
                android:id="@+id/et_password"
                android:drawablePadding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
            <Button
                android:text="@string/login_button_login"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="login"
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_login_desc"/>
        <LinearLayout
            android:focusableInTouchMode="true"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:hint="@string/login_hint_code"
                android:layout_marginTop="10dp"
                android:id="@+id/et_code"
                android:drawablePadding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
            <Button
                android:text="@string/login_button_login_anak"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="login"
                android:id="@+id/btn_login_anak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
